<resources>
    <string name="app_name">Time Scheduler</string>
    <string name="logo">logo</string>
    <string name="scheduleEntities">Schedules</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="cesium">Cesium</string>
    <string name="delete">delete</string>
    <string name="back">back</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="default_theme">Default Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_feedback_summary">Need Improvements? Let me know</string>
    <string name="app_version">App version</string>
    <string name="more_from_dev">More from Developer</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Get other exclusive themes</string>
    <string name="default_summary">Default Theme</string>
    <string name="settings">Settings</string>
    <string name="more_from_dev_summary">Support my other apps</string>
    <string name="vibrate">Vibrate</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="alarm_tone">Alarm tone</string>
    <string name="active">Active</string>
    <string name="select_time">Select time</string>

    <string name="empty_time">Start time or End time should not be empty</string>
    <string name="time_is_not_correct">End time should be greater than Start time</string>

    <string name="undo">Undo</string>
    <string name="schedule_deleted">Schedule deleted</string>
</resources>
