<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:icon="@null"
        android:key="general"
        android:title="General">

        <Preference
            android:defaultValue="@string/default_theme"
            android:icon="@null"
            android:key="app_theme"
            android:summary="@string/default_summary"
            android:title="@string/theme" />

        <Preference
            android:defaultValue="false"
            android:icon="@null"
            android:key="premium_account"
            android:summary="@string/donate_summary"
            android:title="@string/donate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@null"
        android:title="About">

        <Preference
            android:icon="@null"
            android:key="send_feedback"
            android:summary="@string/send_feedback_summary"
            android:title="@string/send_feedback" />

        <Preference
            android:icon="@null"
            android:key="app_version"
            android:title="@string/app_version" />

        <Preference
            android:icon="@null"
            android:key="more_from_dev"
            android:summary="@string/more_from_dev_summary"
            android:title="@string/more_from_dev" />

        <Preference
            android:icon="@null"
            android:title="Delveloped by Adrian Seraspi" />

    </PreferenceCategory>

</PreferenceScreen>