<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_schedule_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimens_medium"
        android:layout_marginStart="@dimen/dimens_xlarge"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginEnd="@dimen/dimens_medium"
        android:layout_marginStart="@dimen/dimens_xlarge"
        android:layout_marginTop="@dimen/dimens_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_schedule_text_layout">

        <TextView
            android:id="@+id/editor_start_time"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dimens_medium"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/editor_end_time"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimens_medium"
            android:layout_weight="1"
            android:text="@string/end_time"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>